new relocator, better home mode

--- a/templates/home_mode.html
+++ b/templates/home_mode.html
@@ -6,7 +6,7 @@
     <title>Frameset</title>
   </head>
   <frameset cols="200, *">
-    <frame src="/mobile" name="navigation">
+    <frame src="/mobile?auto_reload=True" name="navigation">
     <frame src="/" name="inhalt">
   </frameset>
 </html>
